# phypster

./: .gitignore  Entity.py  MANIFEST.in  Makefile  README.md  configFiles.json  essai.py  main.py  mocks.json  phypster.py  securityConfig.py  setup.cfg  setup.py  test_physter.py  tests.py
src/phypster/: Entity.py  __init__.py  __main__.py  cli.py  phypster.py  securityConfig.py
src/phypster/static/: __init__.py  config.py  docker-compose.test.yml  helpersTest.py  logger.py  requirements.txt  security.py
src/phypster/static/template/: app.py.j2  associatedTable.py.j2  dtoV1.py.j2  mappeur.py.j2  mappeurTest.py.j2  mock.py.j2  repository.py.j2  repositoryTest.py.j2  ressourceFlaskClassful.py.j2  service.py.j2  serviceTest.py.j2
static/: __init__.py  security.py
static/template/: app.py.j2  dtoV1.py.j2  dtoV1Test.py.j2  dtoV2.py.j2  entity.py.j2  entityTest.py.j2  enum.py.j2  mappeur.py.j2  mock.py.j2  parser.py.j2  repository.py.j2  repositoryTest.py.j2  ressource.py.j2  ressourceTest.py.j2  service.py.j2
tests/: mocks.json  test_physter.py
