[metadata]
name = phypster
# version = attr: src.VERSION
url = https://github.com/vincauddu29/phypster
description = "Jhypster for python developper. Flask starter \n\n #Jhypster #Python #Flask"
long_description = file: README.md
keywords = flask, python3, Jhypster, starter
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages=find:

[options.entry_points]
console_scripts =
    phypster = phypster.cli:main

[options.packages.find]
where=src